fix(datings_app): fixing bug and complete readme.md

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ APP_PORT=8000
 DB_PATH=
 DB_DRIVER=
 AUTH_KEY=
+DB_MAX_IDLE_CONNS_MASTER=
+DB_MAX_OPEN_CONNS_MASTER=
+DB_MAX_IDLE_CONNS_SLAVE=
+DB_MAX_OPEN_CONNS_SLAVE=
